--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@vueuse/core": "^12.7.0",
+        "autofit.js": "^3.2.4",
         "normalize.css": "^8.0.1",
         "vue": "^3.5.13"
     },
