--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-    "name": "test-dashboard",
-    "type": "module",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vue-tsc -b && vite build",
-        "preview": "vite preview",
-        "lint": "eslint . --fix"
-    },
-    "dependencies": {
-        "@vueuse/core": "^12.7.0",
-        "autofit.js": "^3.2.4",
-        "normalize.css": "^8.0.1",
-        "vue": "^3.5.13"
-    },
-    "devDependencies": {
-        "@antfu/eslint-config": "^4.3.0",
-        "@types/node": "^22.13.5",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "@vue/tsconfig": "^0.7.0",
-        "eslint": "^9.21.0",
-        "eslint-plugin-format": "^1.0.1",
-        "sass": "^1.85.1",
-        "typescript": "~5.7.2",
-        "unplugin-svg-component": "^0.12.1",
-        "vite": "^6.2.0",
-        "vue-tsc": "^2.2.4"
-    }
+  "name": "test-dashboard",
+  "type": "module",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix",
+    "stylelint": "stylelint --fix src/**/*.{css,less,scss,vue,sass}"
+  },
+  "dependencies": {
+    "@vueuse/core": "^12.7.0",
+    "autofit.js": "^3.2.4",
+    "normalize.css": "^8.0.1",
+    "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.3.0",
+    "@types/node": "^22.13.5",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-format": "^1.0.1",
+    "sass": "^1.85.1",
+    "typescript": "~5.7.2",
+    "unplugin-svg-component": "^0.12.1",
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.2.4"
+  }
 }
