feat(core): 添加Stylelint配置及相关依赖，优化代码格式
本次提交主要包含以下改动：
1. 新增`.stylelintignore`和`.stylelintrc.mjs`文件，配置Stylelint规则和忽略文件
2. 在`package.json`中添加Stylelint相关依赖
3. 更新`pnpm-lock.yaml`文件，新增多个Stylelint相关包
4. 调整`HelloWorld.vue`文件中的代码格式，使其符合Stylelint规则

--- a/package.json
+++ b/package.json
@@ -23,7 +23,16 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.21.0",
     "eslint-plugin-format": "^1.0.1",
+    "postcss": "^8.5.3",
+    "postcss-html": "^1.8.0",
+    "postcss-scss": "^4.0.9",
     "sass": "^1.85.1",
+    "stylelint": "^16.14.1",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-recommended": "^15.0.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
+    "stylelint-config-recommended-vue": "^1.6.0",
     "typescript": "~5.7.2",
     "unplugin-svg-component": "^0.12.1",
     "vite": "^6.2.0",
