--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "stylelint": "stylelint --fix src/**/*.{css,less,scss,vue,sass}"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@kjgl77/datav-vue3": "^1.7.4",
     "@vueuse/core": "^12.7.0",
     "autofit.js": "^3.2.4",
+    "date-fns": "^4.1.0",
+    "element-plus": "^2.9.5",
     "normalize.css": "^8.0.1",
-    "vue": "^3.5.13"
+    "nprogress": "^0.2.0",
+    "vue": "^3.5.13",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
     "@types/node": "^22.13.5",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.21.0",
@@ -35,7 +41,10 @@
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.6.0",
     "typescript": "~5.7.2",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-icons": "^22.1.0",
     "unplugin-svg-component": "^0.12.1",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.0",
     "vue-tsc": "^2.2.4"
   }
