--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@antfu/eslint-config": "^4.3.0",
     "@types/node": "^22.13.5",
     "@types/nprogress": "^0.2.3",
+    "@unocss/preset-rem-to-px": "66.1.0-beta.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.21.0",
@@ -41,6 +42,7 @@
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.6.0",
     "typescript": "~5.7.2",
+    "unocss": "66.1.0-beta.3",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-icons": "^22.1.0",
     "unplugin-svg-component": "^0.12.1",
